---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/comment-in-if.typ
snapshot_kind: text
---
#{
  if /*(condition)*/ true { }

  if true /*(condition)*/ { }

  if true {
    /*  111
    222   */
  } // (condition)
  else { }

  if true { } else /*(condition)*/ { }
}
